# Interpretability-Stability-and-Fairness-project

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  main.py  notebook.ipynb  pyproject.toml  requirements.txt
constants/: column_names.py
data/: raw_dataset_sample.csv
models/: black_box_xgboost.pkl
notebooks/: eda.ipynb  model_performance.ipynb  preproc.ipynb  step0_sample_data.ipynb  step1_linear_surrogate.ipynb  step1_logistic_surrogate.ipynb  step1_notebook.ipynb  step3_stability.ipynb  step4_linear_surrogate.ipynb  step4_logistic_surrogate.ipynb  step4_stability.ipynb  step5.ipynb  step5_6_7_8.ipynb  step_2_black_box_model.ipynb  steps_9_10.ipynb
src/: black_box.py  black_box_optimal.py  black_box_optuna.py  fairness.py  global_interpretability.py  local_interpretability.py  model_validation_utils.py  models.py  models_builder.py  neural_network_model.py  performance_interpretability.py  permutation_importance.py  preprocessing.py  stability.py  utils.py
src/fair_credit_scoring/: local_interpretability.py  utils.py
src/notebooks/: step1_linear_surrogate.ipynb
