[project]
name = "interpretability-stability-fairness"
version = "0.1.0"
description = "Exploring interpretability, stability, and fairness in machine learning models. Final project for the Interpretability, Stability and Fairness course from the Data Science & AI for Business MScT at X-HEC."
readme = "README.md"
authors = [
    { name = "Augustin Naton", email = "augustin.naton@gmail.com" },
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.13"

# Runtime dependencies
dependencies = [
    "seaborn>=0.13.2"
]

# Optional dependencies for development
[project.optional-dependencies]
dev = []

# URLs for the project
[project.urls]
repository = "https://github.com/auggy-ntn/Interpretability-Stability-and-Fairness-project/network/dependencies"

# Build system requirements
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["constants*", "fair_credit_scoring*", "models*"]

[tool.hatchling.build.targets.wheel]
packages = ["src/constants", "src/fair_credit_scoring", "src/models"]


###### Configuration for Ruff linter and formatter ######
[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (errors)
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
